--- a/tex/egbib.bib
+++ b/tex/egbib.bib
@@ -68,3 +68,23 @@ year = 2004
   year={2010},
    howpublished = {\url{http://rastergrid.com/blog/2010/09/efficient-gaussian-blur-with-linear-sampling/}}
 }
+
+
+@article{li2014probe,
+	title={Probe and adapt: Rate adaptation for HTTP video streaming at scale},
+	author={Li, Zhi and Zhu, Xiaoqing and Gahm, Joshua and Pan, Rong and Hu, Hao and Begen, Ali C and Oran, David},
+	journal={IEEE Journal on Selected Areas in Communications},
+	volume={32},
+	number={4},
+	pages={719--733},
+	year={2014},
+	publisher={IEEE}
+}
+
+@inproceedings{niamut2016mpeg,
+	title={MPEG DASH SRD: spatial relationship description},
+	author={Niamut, Omar A and Thomas, Emmanuel and D'Acunto, Lucia and Concolato, Cyril and Denoual, Franck and Lim, Seong Yong},
+	booktitle={Proceedings of the 7th International Conference on Multimedia Systems},
+	pages={1--8},
+	year={2016}
+}
