--- a/tex/egbib.bib
+++ b/tex/egbib.bib
@@ -88,3 +88,5 @@ year = 2004
 	pages={1--8},
 	year={2016}
 }
+
+@book{christopher mueller_2015, title={Resumo MPEG-Dash}, url={https://bitmovin.com/dynamic-adaptive-streaming-http-mpeg-dash/}, journal={MPEG-DASH (Dynamic Adaptive Streaming over HTTP, ISO/IEC 23009-1)}, publisher={ }, author={Christopher Mueller}, year={2015}, month={Apr}}
