minor changes relatorio

--- a/tex/egpaper_final.tex
+++ b/tex/egpaper_final.tex
@@ -93,9 +93,9 @@
 	Ao invés de confiar apenas na informação recebida pelo cliente o trabalho de Li propõe uma solução baseada em "prova e adaptação", aqui a taxa de download do TCP é tomada como entrada, apenas quando for um indicador acurado da parcela justa da banda\cite{li2014probe}. Essa situação só ocorre caso a rede não esteja congestionada. Quando há tráfego limitante na rede, ou seja, quando há intervalos maiores entre as respostas, então o algoritmo submete varias provas à banda da rede para tentar prever qual a melhor taxa de transmissão. Com essa abordagem não é necessário constantes trocas de bitrate ao longo da transmissão uma vez que o algoritmo constantemente verifica qual o melhor bitrate de envio apenas analisando o tráfego da rede.
 	
 \section{Algoritmo ABR}
-O algoritmo implementado foi baseado no PANDA\cite{panda}. Esse algoritmo é divido em 4 etapas.
+O algoritmo implementado foi baseado no PANDA\cite{panda} e é divido em 4 etapas.
 
-A proposta desse algoritmo é baseado no fato de que nem sempre a taxa de transferência é uma medida justa para o compartilhamento de largura de banda. Desse modo, o algoritmo propõe que sejam feitos pequenos incrementos na banda ao mesmo tempo que se prepara para reduzir a taxa no caso de congestionamentos na rede. Esses incrementos são feitos toda vez que o cliente solicita um novo segmento do vídeo para ser baixado.
+A proposta desse algoritmo é baseada no fato de que nem sempre a taxa de transferência é uma medida justa para o compartilhamento de largura de banda. Desse modo, o algoritmo propõe que sejam feitos pequenos incrementos na banda ao mesmo tempo que se prepara para reduzir a taxa no caso de congestionamentos na rede. Esses incrementos são feitos sempre que o cliente solicita um novo segmento do vídeo para ser baixado.
 
 \subsection{PyDash}
 A implementação do algoritmo depende de como está estruturado o PyDash. Na plataforma, o algoritmo é criado no arquivo r2a\_panda.py com uma classe de nome R2A\_Panda. Essa classe possui os seguintes atributos:
@@ -342,10 +342,10 @@ Isso é implementado no método handle\_segment\_size\_response da classe com o 
 		\item Inicialmente o algoritmo permanece em uma qualidade média-baixa(normalmente na região de 6) até o buffer ser preenchido, quando começa a sentir um impacto maior da qualidade da conexão.
 	\end{itemize}
 	
-	No grupo onde houve ocorrência de pausas, é possível analisar a correlação entre o tamanho do buffer e as falhas como evidenciado na Tabela \ref{table:1}, visível nos testes com $w$ igual a 0.3, 0.35, 0.4 e  0.5 Mb/s. É evidente que a necessidade de bufferização cresce de acordo com o valor do incremento de prova de bitrate. É visível ainda que este grupo é composto somente por elementos com valores menores de $B_{min}$, e com $w$ acima de 0.1. Isso é validado pelo comportamento da  
+	No grupo onde houve ocorrência de pausas, é possível analisar a correlação entre o tamanho do buffer e as falhas como evidenciado na Tabela \ref{table:1}, visível nos testes com $w$ igual a 0.3, 0.35, 0.4 e  0.5 Mb/s. É evidente que a necessidade de bufferização cresce de acordo com o valor do incremento de prova de bitrate. É visível ainda que este grupo é composto somente por elementos com valores menores de $B_{min}$ (13, 20 e 26), e com $w$ acima de 0.1. Isso é validado pelo comportamento da  
 	constante de incremento de prova do bitrate, que pelo valor menor assumido, diminui a taxa de crescimento da qualidade, impedindo-a de atingir valores maiores e favorecendo o buffering de segmentos.
 	
-	No grupo onde não foram identificadas pausas, como mostrado na Tabela \ref{table:2}, é possível observar a relação entre o tamanho escolhido para $B_{min}$ e a qualidade a ser baixada. Com um buffer mínimo maior, o algoritmo prioriza qualidades menores, dedicando a banda ao preenchimento do buffer, resultando diretamente em um tempo menor de download. Isso é evidente para todos os valores da constante de incremento ($w$) e é perceptível também analisando-se os gráficos. Os valores máximos de qualidade também são afetados pela quantidade de seguimentos a serem bufferizados, com a qualidade máxima encontrada nos resultados tendendo a ser menor em testes com $B_{min}$ maiores. É importante notar que em alguns casos o $Q_{max}$ é afetado por picos de largura de banda que duram pouquíssimo tempo, ainda mais nos conjuntos de testes com $w$ maiores. 
+	No grupo onde não foram identificadas pausas, como 	mostrado na Tabela \ref{table:2}, é possível observar a relação entre o tamanho escolhido para $B_{min}$ e a qualidade a ser baixada. Com um buffer mínimo maior, o algoritmo prioriza qualidades menores, dedicando a banda ao preenchimento do buffer, resultando diretamente em um tempo menor de download. Isso é evidente para todos os valores da constante de incremento ($w$) e é perceptível também analisando-se os gráficos. Os valores máximos de qualidade também são afetados pela quantidade de seguimentos a serem bufferizados, com a qualidade máxima encontrada nos resultados tendendo a ser menor em testes com $B_{min}$ maiores. É importante notar que em alguns casos o $Q_{max}$ é afetado por picos de largura de banda que duram pouquíssimo tempo, ainda mais nos conjuntos de testes com $w$ maiores. 
 	
 	Nos gráficos mostrados, é possível notar a diferença que o tamanho do buffer causa na duração do download e na qualidade. \ref{fig:1}\ref{fig:3}
 	\begin{figure}
